--- a/src/Program/Program.csproj
+++ b/src/Program/Program.csproj
@@ -18,4 +18,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="4.2.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="5.0.0-beta.4" />
+  </ItemGroup>
 </Project>
